--- a/smceframework/widget/SmBreadcrumbs/assets/breadcrumbs.css
+++ b/smceframework/widget/SmBreadcrumbs/assets/breadcrumbs.css
@@ -1,11 +1,11 @@
 
-.breadcrumbs{
+.smce_breadcrumbs{
 	float:left;
 	margin-left:5px;
 	color:#3bafda;
 }
 
-.breadcrumbs_span{
+.smce_breadcrumbs_span{
 	margin-left:5px;
 	color:#232323;
 }
