--- a/smceframework/widget/SmDetailView/assets/gridview.css
+++ b/smceframework/widget/SmDetailView/assets/gridview.css
@@ -1,18 +1,18 @@
 
-.SmDetailView{
+.smce_detailview{
 	width: 600px;
 	border:1px solid #79c5e6;
 	
 }
 
 
-.SmDetailView  .view_x1{
+.smce_detailview  .view_x1{
 	width: 50%;
 	padding:5px;
 	background-color:#c7ecfc;
 }
 
-.SmDetailView  .view_x2{
+.smce_detailview  .view_x2{
 	width:10px;
 	padding:5px;
 	background-color:#c7ecfc;
@@ -20,7 +20,7 @@
 	border-right:1px solid #79c5e6;
 }
 
-.SmDetailView .view_x3{
+.smce_detailview .view_x3{
 	padding:5px;
 	background-color:#e5f6fd;
 }
